调整 整体页面布局大小

--- a/_posts/2022-03-18-NIO基本API.md
+++ b/_posts/2022-03-18-NIO基本API.md
@@ -1,14 +1,8 @@
 ---
-title: Welcome to Johnny Cottage
+title: NIO 基本概念和使用
 categories: [socket]
 comments: true
 ---
-
-
-
-# NIO 基本概念和使用
-
-Java NIO开发需要注意的坑https://blog.csdn.net/pange1991/article/details/86491520
 
 ![Study notes of JAVA NIO - architecture briefings - Alibaba Cloud Developer  Forums: Cloud Discussion Forums](https://cdn.askajohnny.com/22_634_bcabb2910da4ead.png)
 
