add jekyll+github 个人博客

--- a/_posts/2022-03-18-NIO基本API.md
+++ b/_posts/2022-03-18-NIO基本API.md
@@ -1,8 +1,10 @@
 ---
-title: NIO 基本概念和使用
-categories: [socket]
+title: Jekyll + Github 搭建个人博客
+categories: [杂记]
 comments: true
 ---
+
+
 
 ![Study notes of JAVA NIO - architecture briefings - Alibaba Cloud Developer  Forums: Cloud Discussion Forums](https://cdn.askajohnny.com/22_634_bcabb2910da4ead.png)
 
